--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,35 @@
-<html>
-	<head>
-		<title></title>
-	</head>
-	<body>
-		
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
+
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Chat Codebits</title>
+
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	
+	<!-- Date: 2010-11-10 -->
+</head>
+<body class="helvetica">
+<div id="wrapper">
+	<div id="list" class="font10 line1">
+		<ul>
+			<li><a href="#">Humberto Coelho</a></li>
+			<li><a href="#">Jorge Jesus</a></li>
+			<li><a href="#">Rui Águas</a></li>
+			<li><a href="#">Walter Dias</a></li>
+		</ul>
+	</div>
+	<div id="chat" >
+		<div id="chat-wrapper" class="font10 line1">
+			<p><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
+			<p><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
+		</div>
+		<div id="chat-input">
+			<div class="hr"></div>
+			<input type="text" class="helvetica font10 line1" name="inputBox" value="" id="inputBox">
+		</div>
+	</div>
+</div>
+</body>
 </html>
