--- a/client/index.html
+++ b/client/index.html
@@ -22,11 +22,12 @@
 	</div>
 	<div id="chat" >
 		<div id="chat-wrapper" class="font10 line1">
+			<p class="odd"><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
 			<p><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
+			<p class="odd"><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
 			<p><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
 		</div>
 		<div id="chat-input">
-			<div class="hr"></div>
 			<input type="text" class="helvetica font10 line1" name="inputBox" value="" id="inputBox">
 		</div>
 	</div>
