--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,20 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	
 	<!-- Date: 2010-11-10 -->
+	<script type="text/javascript">
+		var conn = new WebSocket("ws://localhost:9000");
+		conn.onmessage = function(evt) {
+			console.debug(evt.data);
+		}
+
+		function send_message() {
+			if(conn) {
+				conn.send($('inputBox').value);
+			} else {
+				console.debug("send error");
+			}
+		}
+	</script>
 </head>
 <body class="helvetica">
 <div id="wrapper">
@@ -27,7 +41,9 @@
 		</div>
 		<div id="chat-input">
 			<div class="hr"></div>
-			<input type="text" class="helvetica font10 line1" name="inputBox" value="" id="inputBox">
+			<form onsubmit="send_message()">
+			<input type="text" class="helvetica font10 line1" name="inputBox" value="" id="inputBox"/>
+		</form>
 		</div>
 	</div>
 </div>
