--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
 	<title>Chat Codebits</title>
 
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="css/reset-fonts-grids.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	
 	
 	<!-- Date: 2010-11-10 -->
 	<script type="text/javascript">
@@ -26,7 +28,7 @@
 </head>
 <body class="helvetica">
 <div id="wrapper">
-	<div id="list" class="font10 line1">
+	<div id="list" class="font11 line1">
 		<ul>
 			<li><a href="#">Humberto Coelho</a></li>
 			<li><a href="#">Jorge Jesus</a></li>
@@ -35,16 +37,15 @@
 		</ul>
 	</div>
 	<div id="chat" >
-		<div id="chat-wrapper" class="font10 line1">
-			<p class="odd"><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
-			<p><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
-			<p class="odd"><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
-			<p><span class="nick">[Nick]</span> Exemplo de mensagem de sistema</p>
+		<div id="chat-wrapper" class="font11 line1">
+			<p><span class="time">[12:00]</span> <span class="nick">Humberto Coelho:</span> Exemplo de mensagem de sistema</p>
+			<p><span class="time">[12:00]</span> <span class="nick">Humberto Coelho:</span> Exemplo de mensagem de sistema</p>
+			<p><span class="time">[12:00]</span> <span class="nick">Humberto Coelho:</span> Exemplo de mensagem de sistema</p>
+			<p><span class="time">[12:00]</span> <span class="nick">Jorge Jesus:</span> Exemplo de mensagem de sistema</p>
 		</div>
 		<div id="chat-input">
-
 			<form onsubmit="send_message()">
-			<input type="text" class="helvetica font10 line1" name="inputBox" value="" id="inputBox"/>
+			<input type="text" class="helvetica font11 line1" name="inputBox" value="" id="inputBox"/>
 		</form>
 		</div>
 	</div>
