--- a/client/index.html
+++ b/client/index.html
@@ -8,12 +8,13 @@
 	<link rel="stylesheet" href="css/reset-fonts-grids.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<script src="jquery-1.4.3.min.js" type="text/javascript"></script>
+	<script src="client.js" type="text/javascript"></script>
 
 
 	<script type="text/javascript">
 		var conn = new WebSocket("ws://localhost:9000");
 		conn.onmessage = function(evt) {
-			console.debug(evt.data);
+			process(evt.data);
 		}
 
 	$(document).ready(function() {
