--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/reset-fonts-grids.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<script src="jquery-1.4.3.min.js" type="text/javascript"></script>
+	<script src="jquery.xdomainajax.js" type="text/javascript"></script>
 
 
 	<script type="text/javascript">
@@ -17,6 +18,9 @@
 		}
 
 	$(document).ready(function() {
+
+//		$.ajax({   type: "GET",   url: "https://services.sapo.pt/Codebits/gettoken",   data: "user=pelf@webreakstuff.com&password=",   success: function(msg){     alert( "Data Saved: " + msg );   } });
+
 		$("#inputForm").live("submit", function(e) {
 			e.preventDefault();
 			if (conn) {
