--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 
 
 	<script type="text/javascript">
-		var conn = new WebSocket("ws://localhost:9000");
+		var conn = new WebSocket("ws://codebits.todo.nu:9009");
 		conn.onmessage = function(evt) {
 			console.debug(evt.data);
 		}
