--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
 <body class="helvetica">
 <div id="wrapper">
 	<div id="list" class="font11 line1 text-left">
+		<h1 class="font24 pb-s">Stage A</h1>
 		<ul>
 			<li><a href="#">Humberto Coelho</a></li>
 			<li><a href="#">Jorge Jesus</a></li>
