--- a/client/index.html
+++ b/client/index.html
@@ -30,23 +30,78 @@
 			}
 		});
 		$('#chat').css("height",$(document).height());
+		$('#chat-wrapper').css("height",$(document).height()-90);
+		$('#list-wrapper').css("height",$(document).height()-90);
 	});
 	</script>
 </head>
 <body class="helvetica">
 <div id="wrapper">
-	<div id="list" class="font11 line1 text-left">
+
+	<div id="list-wrapper" class="font11 line1 text-left">
 		<h1 class="font24 pb-s">Stage A</h1>
-		<ul>
-			<li><a href="#">Humberto Coelho</a></li>
-			<li><a href="#">Jorge Jesus</a></li>
-			<li><a href="#">Rui Águas</a></li>
-			<li><a href="#">Walter Dias</a></li>
-		</ul>
+		<div id="list">
+			<ul>
+				<li><a href="#">Humberto Coelho</a></li>
+				<li><a href="#">Jorge Jesus</a></li>
+				<li><a href="#">Rui Águas</a></li>
+				<li><a href="#">Walter Dias</a></li>
+				<li><a href="#">Humberto Coelho</a></li>
+				<li><a href="#">Humberto Coelho</a></li>
+				<li><a href="#">Jorge Jesus</a></li>
+				<li><a href="#">Rui Águas</a></li>
+				<li><a href="#">Walter Dias</a></li>
+				<li><a href="#">Humberto Coelho</a></li>
+				<li><a href="#">Jorge Jesus</a></li>
+				<li><a href="#">Rui Águas</a></li>
+				<li><a href="#">Walter Dias</a></li>
+				<li><a href="#">Humberto Coelho</a></li>
+				<li><a href="#">Jorge Jesus</a></li>
+				<li><a href="#">Rui Águas</a></li>
+				<li><a href="#">Walter Dias</a></li>
+				<li><a href="#">Humberto Coelho</a></li>
+				<li><a href="#">Jorge Jesus</a></li>
+				<li><a href="#">Rui Águas</a></li>
+				<li><a href="#">Walter Dias</a></li>
+				<li><a href="#">Humberto Coelho</a></li>
+				<li><a href="#">Jorge Jesus</a></li>
+				<li><a href="#">Rui Águas</a></li>
+				<li><a href="#">Walter Dias</a></li>
+			</ul>
+		</div>
 	</div>
 	<div id="chat" class=" text-left" >
 		<div id="chat-wrapper" class="font11 line1">
-
+			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
+			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
+			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Humberto Coelho:</a> Exemplo de mensagem de pessoa</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Jorge Jesus:</a> Exemplo de mensagem de pessoa</p>
+			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
+			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
+			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Humberto Coelho:</a> Exemplo de mensagem de pessoa</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Jorge Jesus:</a> Exemplo de mensagem de pessoa</p>
+			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
+			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
+			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Humberto Coelho:</a> Exemplo de mensagem de pessoa</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Jorge Jesus:</a> Exemplo de mensagem de pessoa</p>
+			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
+			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
+			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Humberto Coelho:</a> Exemplo de mensagem de pessoa</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Jorge Jesus:</a> Exemplo de mensagem de pessoa</p>
+			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
+			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
+			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Humberto Coelho:</a> Exemplo de mensagem de pessoa</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Jorge Jesus:</a> Exemplo de mensagem de pessoa</p>
+			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
+			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
+			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Humberto Coelho:</a> Exemplo de mensagem de pessoa</p>
+			<p><span class="time">[12:00]</span> <a href="#" class="nick">Jorge Jesus:</a> Exemplo de mensagem de pessoa</p>
 			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
 			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
 			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
