--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,8 @@
 	<script src="jquery.xdomainajax.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
+		var count = 0;
+		var token;
 		var conn = new WebSocket("ws://codebits.todo.nu:9009");
 		conn.onmessage = function(evt) {
 			process(evt.data);
