--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,8 @@
 		});
 		$('#chat').css("height",$(document).height());
 	});
+	
+	 //$.ajax({url:"http://services.sapo.pt/Codebits/gettoken?user=tpinto@webreakstuff.com&password=DASDSADSA", dataType:'jsonp', data:'', success: function (data){alert(data.token);}});
 	</script>
 </head>
 <body class="helvetica">
