--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 		var token;
 		var conn = new WebSocket("ws://codebits.todo.nu:9009");
 		conn.onmessage = function(evt) {
-			console.debug(evt.data);
+			console.debug(JSON.stringify(evt.data));
 			process(evt.data);
 		};
 
