--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,19 @@
 	<script src="client.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
+		function printObject(o) {
+		  var out = '';
+		  for (var p in o) {
+		    out += p + ': ' + o[p] + '\n';
+		  }
+			return out;
+		}
+	
 		var count = 0;
 		var token;
 		var conn = new WebSocket("ws://codebits.todo.nu:9009");
 		conn.onmessage = function(evt) {
-			console.debug(JSON.stringify(evt.data));
+			console.debug(printObject(evt.data));
 			process(evt.data);
 		};
 
