--- a/client/index.html
+++ b/client/index.html
@@ -12,17 +12,10 @@
 	<script src="client.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
-		function printObject(o) {
-		  var out = '';
-		  for (var p in o) {
-		    out += p + ': ' + o[p] + '';
-		  }
-			return out;
-		}
 	
 		var count = 0;
 		var token;
-		var conn = new WebSocket("ws://localhost:9009");
+		var conn = new WebSocket("ws://codebits.todo.nu:9009");
 		conn.onmessage = function(evt) {
 			console.debug("message: " + evt.data);
 			process(evt.data);
