working peer list

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
 		};
 		conn.onclose = function(){
 			console.debug("Socket has been closed!");
+			//conn = new WebSocket("ws://localhost:9009");
 		};
 		conn.onerror = function(){
 			console.debug("Socket got an error!");
@@ -61,41 +62,14 @@
 	<div id="list-wrapper" class=" line1 text-left">
 		<h1 class="font18 pb-s">Stage A</h1>
 		<div id="list" class="font11">
-			<ul>
-				<li><a href="#">Humberto Coelho</a></li>
-				<li><a href="#">Jorge Jesus</a></li>
-				<li><a href="#">Rui Águas</a></li>
-				<li><a href="#">Walter Dias</a></li>
-				<li><a href="#">Humberto Coelho</a></li>
-				<li><a href="#">Humberto Coelho</a></li>
-				<li><a href="#">Jorge Jesus</a></li>
-				<li><a href="#">Rui Águas</a></li>
-				<li><a href="#">Walter Dias</a></li>
-				<li><a href="#">Humberto Coelho</a></li>
-				<li><a href="#">Jorge Jesus</a></li>
-				<li><a href="#">Rui Águas</a></li>
-				<li><a href="#">Walter Dias</a></li>
+			<ul id="people">
 
 			</ul>
 		</div>
 	</div>
 	<div id="chat" class=" text-left" >
 		<div id="chat-wrapper" class="font11 line1">
-			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
-			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
-			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
-			<p><span class="time">[12:00]</span> <a href="#" class="nick">Humberto Coelho:</a> Exemplo de mensagem de pessoa</p>
-			<p><span class="time">[12:00]</span> <a href="#" class="nick">Jorge Jesus:</a> Exemplo de mensagem de pessoa</p>
-			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
-			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
-			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
-			<p><span class="time">[12:00]</span> <a href="#" class="nick">Humberto Coelho:</a> Exemplo de mensagem de pessoa</p>
-			<p><span class="time">[12:00]</span> <a href="#" class="nick">Jorge Jesus:</a> Exemplo de mensagem de pessoa</p>
-			<p class="notice"><span class="time">[12:00]</span> *** Exemplo de mensagem de sistema ***</p>
-			<p class="help"><span class="time">[12:00]</span> Exemplo de mensagem de help</p>
-			<p class="system"><span class="time">[12:00]</span> Entrou no sistema</p>
-			<p><span class="time">[12:00]</span> <a href="#" class="nick">Humberto Coelho:</a> Exemplo de mensagem de pessoa</p>
-			<p><span class="time">[12:00]</span> <a href="#" class="nick">Jorge Jesus:</a> Exemplo de mensagem de pessoa</p>
+
 		</div>
 		<div id="chat-input">
 
